--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^11.11.0"
+    "stripe": "^11.11.0",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
