--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@stripe/stripe-js": "^1.46.0",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "framer-motion": "^10.12.2",
     "next": "^13.2.3",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "stripe": "^11.11.0",
     "zustand": "^4.3.3"
   },
