--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "framer-motion": "^10.12.2",
+    "micro": "^10.0.1",
     "next": "^13.2.3",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
